<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_shopping_bag_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/light_red" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/acme"
            android:textColor="@color/light_red"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop"
            android:textColor="@color/light_red"
            android:textSize="36sp" />
    </LinearLayout>

    <Button
        android:id="@+id/signup_btn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/light_red"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:strokeColor="@color/light_red"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/login"
        android:textSize="16sp"
        app:backgroundTint="@color/light_red"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn"
        app:layout_constraintVertical_bias="0.098" />

</androidx.constraintlayout.widget.ConstraintLayout>
