<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    tools:context=".ui.basket.ProductDetailsFragment">

    <TextView
        android:id="@+id/name"
        style="@style/CardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_low"
        android:text="@string/name"
        android:textSize="@dimen/product_page_title"
        android:fontFamily="@font/roboto_medium"/>

    <ImageView
        android:id="@+id/image"
        android:padding="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="300dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/_1_inchspg_5000x_fb94854f_81c5_439e_b169_6bcbbc037fac_1200x" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/brandKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium"
            android:text="@string/brand"
            android:textSize="@dimen/product_page_subtitle"
            android:fontFamily="@font/roboto_medium"/>

        <TextView
            android:id="@+id/brandContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_default"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/product_thumbnail_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_low">

        <TextView
            android:id="@+id/priceKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_low"
            android:text="@string/price"
            android:textSize="@dimen/product_page_subtitle"
            android:fontFamily="@font/roboto_medium" />

        <TextView
            android:id="@+id/priceContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_default"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/product_thumbnail_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_low">

        <TextView
            android:id="@+id/descriptionKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_low"
            android:text="@string/desc"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/product_page_subtitle" />

        <TextView
            android:id="@+id/descriptionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_default"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/product_thumbnail_text"/>
    </LinearLayout>

</LinearLayout>