<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="@dimen/cardview_default_elevation"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_medium"
        android:orientation="horizontal"
        android:padding="@dimen/padding_low">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="@dimen/product_thumbnail_side"
            android:layout_height="@dimen/product_thumbnail_side"
            android:adjustViewBounds="true"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/_1_inchspg_5000x_fb94854f_81c5_439e_b169_6bcbbc037fac_1200x"
            android:paddingTop="@dimen/padding_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_low"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_default">

            <TextView
                style="@style/CardText"
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/product_name"
                android:textSize="@dimen/product_thumbnail_text" />

            <TextView
                style="@style/CardSecondaryText"
                android:id="@+id/brand_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/product_brand"
                android:textSize="@dimen/product_thumbnail_text" />

                <TextView
                    style="@style/CardText"
                    android:id="@+id/price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/product_price"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
